# services-registry

./: .gitignore  LICENSE  README.rst  pyproject.toml  tox.ini
src/services_registry/: services_registry.py
tests/: test_services_registry.py
